--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.3.13"
   },
+  "peerDependencies": {
+    "react": "^0.14.3"
+  },
   "dependencies": {
     "melon-classname": "^0.1.1",
-    "react": "^0.14.3",
     "react-motion": "^0.3.1",
     "underscore": "^1.8.3"
   }
