--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 node_js:
-    - "4.2.2"
+    - "4.2.3"
 install:
-    - npm install
+    - npm install npm@3 -g && npm -v && npm install
 script:
     - npm run test
 after_script:
