--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: node_js
 node_js:
-    - "5"
+    - 4
 install:
-    - npm install
+|
+    npm install -g npm@3
+    npm --version
+    npm install
 script:
     - npm run test
 after_script:
