--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ node_js:
     - 4
 install:
 |
-    npm install -g npm@3
+    npm install -g npm@latest
+    npm cache clean
     npm --version
-    npm install
+    npm install --registry http://registry.npmjs.org
 script:
     - npm run test
 after_script:
