--- a/package.json
+++ b/package.json
@@ -42,11 +42,12 @@
     "watchify": "^3.7.0"
   },
   "scripts": {
-    "test": "NODE_ENV=test ./node_modules/.bin/karma start",
+    "test": "NODE_ENV=test ./node_modules/.bin/karma start ./tool/karma.conf.js",
+    "test-ci": "NODE_ENV=test ./node_modules/.bin/karma start ./tool/karma.ci.conf.js",
     "coveralls": "cat ./coverage/lcov/lcov.info | ./node_modules/.bin/coveralls",
-    "test:local": "./node_modules/.bin/karma start",
-    "lint": "fecs src test --rule",
-    "build": "sh tool/build.sh"
+    "lint": "fecs src --rule",
+    "build": "sh tool/build.sh",
+    "release": "sh tool/release.sh"
   },
   "repository": {
     "type": "git",
