--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,9 @@ node_js:
 install:
 |
     npm install -g npm@latest
-    npm cache clean
     npm --version
     npm install --registry http://registry.npmjs.org
 script:
-    - npm run test
+    - npm run test-ci
 after_script:
     - npm run coveralls
