--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "example": "example"
   },
   "devDependencies": {
-    "babel-core": "^6.10.4",
+    "babel-core": "^6.7.2",
     "babel-istanbul": "^0.11.0",
-    "babel-plugin-external-helpers": "^6.8.0",
-    "babel-plugin-transform-es2015-modules-umd": "^6.8.0",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
-    "babel-plugin-transform-es3-property-literals": "^6.8.0",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-plugin-external-helpers": "^6.5.0",
+    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
+    "babel-plugin-transform-es2015-modules-umd": "^6.6.5",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.5.0",
+    "babel-plugin-transform-es3-property-literals": "^6.5.0",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-loose": "^7.0.0",
-    "babel-preset-react": "6.5.0",
-    "babel-preset-stage-1": "6.3.13",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "browserify-istanbul": "^2.0.0",
@@ -29,15 +30,14 @@
     "karma-browserify": "^5.0.5",
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.0.0",
-    "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.1.1",
     "karma-mocha-reporter": "^2.0.4",
-    "karma-phantomjs-launcher": "^1.0.1",
-    "melon": "^0.3.1",
-    "mocha": "^2.5.3",
+    "karma-sauce-launcher": "^1.0.0",
+    "lodash": "^3.10.1",
+    "mocha": "^2.2.5",
     "nib": "^1.1.0",
-    "react-addons-test-utils": "^0.14.8",
-    "stylus": "^0.54.5",
+    "react-addons-test-utils": "^0.14.3",
+    "stylus": "^0.54.2",
     "swig": "^1.4.2",
     "watchify": "^3.7.0"
   },
