--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "karma-mocha-reporter": "^2.0.4",
     "karma-sauce-launcher": "^1.0.0",
     "lodash": "^3.10.1",
+    "melon": "^0.3.1",
     "mocha": "^2.2.5",
     "nib": "^1.1.0",
     "react-addons-test-utils": "^0.14.3",
