--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "karma-browserify": "^5.0.5",
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.0.0",
+    "karma-es5-shim": "https://github.com/pokehanai/karma-es5-shim/archive/v2.1.0.tar.gz",
     "karma-mocha": "^1.1.1",
     "karma-mocha-reporter": "^2.0.4",
     "karma-sauce-launcher": "^1.0.0",
     "lodash": "^3.10.1",
-    "melon": "^0.3.1",
     "mocha": "^2.2.5",
     "nib": "^1.1.0",
     "react-addons-test-utils": "^0.14.3",
