--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "example": "example"
   },
   "devDependencies": {
-    "babel-core": "^6.7.2",
+    "babel-core": "^6.10.4",
     "babel-istanbul": "^0.11.0",
     "babel-plugin-external-helpers": "^6.5.0",
     "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
@@ -18,28 +18,25 @@
     "babel-plugin-transform-es3-property-literals": "^6.5.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-loose": "^7.0.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.5.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "browserify-istanbul": "^2.0.0",
     "coveralls": "^2.11.9",
-    "expect": "^1.12.2",
-    "expect-jsx": "^2.0.1",
-    "karma": "^1.1.0",
+    "jasmine-core": "^2.4.1",
+    "jasmine-expect-jsx": "^1.1.2",
+    "karma": "^1.1.1",
     "karma-browserify": "^5.0.5",
     "karma-chrome-launcher": "^1.0.1",
-    "karma-coverage": "^1.0.0",
-    "karma-es5-shim": "https://github.com/pokehanai/karma-es5-shim/archive/v2.1.0.tar.gz",
-    "karma-mocha": "^1.1.1",
+    "karma-coverage": "^1.1.0",
+    "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "^2.0.4",
     "karma-sauce-launcher": "^1.0.0",
     "lodash": "^3.10.1",
-    "mocha": "^2.2.5",
     "nib": "^1.1.0",
     "react-addons-test-utils": "^0.14.3",
     "stylus": "^0.54.2",
-    "swig": "^1.4.2",
     "watchify": "^3.7.0"
   },
   "scripts": {
