--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-    "presets": ["es2015-loose", "react", "stage-1"]
+    "presets": [
+        ["es2015", {"loose": true}],
+        "react",
+        "stage-1"
+    ]
 }
