将 InputComponent 的 validate 功能移除

--- a/.fecsrc
+++ b/.fecsrc
@@ -1,5 +1,8 @@
 {
     "eslint": {
+        "env": {
+            "es6": -1
+        },
         "rules": {
             "fecs-prefer-destructure": ["off", "always"],
             "fecs-use-for-of": ["off", "always"],
