--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
   "version": "0.3.4",
   "description": "React ui components base project",
   "main": "./src",
+  "scripts": {
+    "test": "NODE_ENV=test karma start ./test/karma.local.conf.js",
+    "test-ci": "NODE_ENV=test karma start ./test/karma.ci.conf.js",
+    "coveralls": "cat ./coverage/lcov/lcov.info | ./node_modules/.bin/coveralls",
+    "lint": "fecs src --rule",
+    "build": "NODE_ENV=production gulp build",
+    "start": "NODE_ENV=dev node tools/server.js",
+    "setup": "rimraf asset && NODE_ENV=dev webpack --config=tools/webpack.dll.js"
+  },
   "directories": {
     "doc": "doc",
     "test": "test",
@@ -11,8 +20,10 @@
   "devDependencies": {
     "babel-core": "^6.10.4",
     "babel-istanbul": "^0.11.0",
+    "babel-loader": "^6.2.5",
     "babel-plugin-external-helpers": "^6.5.0",
-    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
+    "babel-plugin-external-helpers-insert-require": "^1.0.0",
+    "babel-plugin-istanbul": "^3.0.0",
     "babel-plugin-transform-es2015-modules-umd": "^6.6.5",
     "babel-plugin-transform-es3-member-expression-literals": "^6.5.0",
     "babel-plugin-transform-es3-property-literals": "^6.5.0",
@@ -24,35 +35,46 @@
     "browserify": "^13.0.1",
     "browserify-istanbul": "^2.0.0",
     "coveralls": "^2.11.9",
+    "css-loader": "^0.24.0",
+    "express": "^4.14.0",
+    "file-loader": "^0.9.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-babel-external-helpers": "^2.0.2",
+    "gulp-clean": "^0.3.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "html-webpack-harddisk-plugin": "0.0.2",
+    "html-webpack-plugin": "^2.22.0",
     "jasmine-core": "^2.4.1",
     "jasmine-expect-jsx": "^1.1.2",
+    "json-loader": "^0.5.4",
     "karma": "^1.1.1",
-    "karma-browserify": "^5.0.5",
+    "karma-browserstack-launcher": "^1.1.1",
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.1.0",
     "karma-jasmine": "^1.0.2",
+    "karma-jasmine-expect-jsx": "^1.0.2",
     "karma-mocha-reporter": "^2.0.4",
-    "karma-sauce-launcher": "^1.0.0",
-    "lodash": "^3.10.1",
+    "karma-webpack": "^1.8.0",
     "nib": "^1.1.0",
-    "react-addons-test-utils": "^0.14.3",
+    "react-addons-test-utils": "15.4.1",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "rimraf": "^2.5.4",
+    "style-loader": "^0.13.1",
     "stylus": "^0.54.2",
-    "watchify": "^3.7.0"
-  },
-  "scripts": {
-    "test": "NODE_ENV=test ./node_modules/.bin/karma start ./tool/karma.conf.js",
-    "test-ci": "NODE_ENV=test ./node_modules/.bin/karma start ./tool/karma.ci.conf.js",
-    "coveralls": "cat ./coverage/lcov/lcov.info | ./node_modules/.bin/coveralls",
-    "lint": "fecs src --rule",
-    "build": "sh tool/build.sh",
-    "release": "sh tool/release.sh"
+    "stylus-loader": "^2.3.1",
+    "watchify": "^3.7.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.8.3",
+    "webpack-hot-middleware": "^2.12.2"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/react-melon/melon-core.git"
   },
   "peerDependencies": {
-    "react": ">=0.14"
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
   },
   "keywords": [
     "react",
@@ -74,7 +96,47 @@
     "dependencies": {}
   },
   "dependencies": {
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8"
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
+  },
+  "babel": {
+    "env": {
+      "dev": {
+        "presets": [
+          "es2015",
+          "stage-2",
+          "react"
+        ]
+      },
+      "test": {
+        "presets": [
+          "es2015",
+          "stage-2",
+          "react"
+        ],
+        "plugins": [
+          "istanbul"
+        ]
+      },
+      "production": {
+        "presets": [
+          [
+            "es2015",
+            {
+              "loose": true,
+              "modules": "umd"
+            }
+          ],
+          "stage-2",
+          "react"
+        ],
+        "plugins": [
+          "external-helpers",
+          "external-helpers-insert-require",
+          "transform-es3-property-literals",
+          "transform-es3-member-expression-literals"
+        ]
+      }
+    }
   }
 }
