--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "browserify-istanbul": "^2.0.0",
     "coveralls": "^2.11.9",
     "css-loader": "^0.24.0",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-15": "^1.0.2",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
@@ -46,25 +48,24 @@
     "html-webpack-harddisk-plugin": "0.0.2",
     "html-webpack-plugin": "^2.22.0",
     "jasmine-core": "^2.4.1",
-    "jasmine-expect-jsx": "^1.1.2",
     "json-loader": "^0.5.4",
     "karma": "^1.1.1",
     "karma-browserstack-launcher": "^1.1.1",
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.1.0",
     "karma-jasmine": "^1.0.2",
-    "karma-jasmine-expect-jsx": "^1.0.2",
     "karma-mocha-reporter": "^2.0.4",
-    "karma-webpack": "^1.8.0",
+    "karma-webpack": "^2.0.5",
     "nib": "^1.1.0",
-    "react-addons-test-utils": "15.4.1",
+    "react-addons-test-utils": "15.6.2",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-test-renderer": "^16.0.0",
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.2",
     "stylus-loader": "^2.3.1",
     "watchify": "^3.7.0",
-    "webpack": "^1.13.1",
+    "webpack": "^2.7.0",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2"
   },
@@ -73,8 +74,8 @@
     "url": "git+https://github.com/react-melon/melon-core.git"
   },
   "peerDependencies": {
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2"
   },
   "keywords": [
     "react",
@@ -96,8 +97,8 @@
     "dependencies": {}
   },
   "dependencies": {
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2"
   },
   "babel": {
     "env": {
