--- a/package.json
+++ b/package.json
@@ -8,41 +8,28 @@
     "test-ci": "NODE_ENV=test karma start ./test/karma.ci.conf.js",
     "coveralls": "cat ./coverage/lcov/lcov.info | ./node_modules/.bin/coveralls",
     "lint": "fecs src --rule",
-    "build": "NODE_ENV=production gulp build",
+    "build": "rimraf lib && NODE_ENV=production gulp build",
     "start": "NODE_ENV=dev node tools/server.js",
     "setup": "rimraf asset && NODE_ENV=dev webpack --config=tools/webpack.dll.js"
   },
-  "directories": {
-    "doc": "doc",
-    "test": "test",
-    "example": "example"
-  },
   "devDependencies": {
-    "babel-core": "^6.10.4",
-    "babel-istanbul": "^0.11.0",
+    "babel-core": "^6.26.0",
+    "babel-istanbul": "^0.12.2",
     "babel-loader": "^6.2.5",
-    "babel-plugin-external-helpers": "^6.5.0",
-    "babel-plugin-external-helpers-insert-require": "^1.0.0",
-    "babel-plugin-istanbul": "^3.0.0",
+    "babel-plugin-istanbul": "^4.1.5",
     "babel-plugin-transform-es2015-modules-umd": "^6.6.5",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.5.0",
-    "babel-plugin-transform-es3-property-literals": "^6.5.0",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.5.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.0.1",
-    "browserify-istanbul": "^2.0.0",
     "coveralls": "^2.11.9",
     "css-loader": "^0.24.0",
     "enzyme": "^3.1.0",
-    "enzyme-adapter-react-15": "^1.0.2",
+    "enzyme-adapter-react-16": "^1.0.2",
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-babel-external-helpers": "^2.0.2",
     "gulp-clean": "^0.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "html-webpack-harddisk-plugin": "0.0.2",
@@ -57,8 +44,9 @@
     "karma-mocha-reporter": "^2.0.4",
     "karma-webpack": "^2.0.5",
     "nib": "^1.1.0",
-    "react-addons-test-utils": "15.6.2",
-    "react-hot-loader": "^3.0.0-beta.6",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.0.0",
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
@@ -74,8 +62,8 @@
     "url": "git+https://github.com/react-melon/melon-core.git"
   },
   "peerDependencies": {
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2"
+    "react": "^15.6.2||^16.0.0",
+    "react-dom": "^15.6.2||^16.0.0"
   },
   "keywords": [
     "react",
@@ -87,57 +75,5 @@
   "bugs": {
     "url": "https://github.com/react-melon/melon-core/issues"
   },
-  "homepage": "https://github.com/react-melon/melon-core#readme",
-  "edp": {
-    "wwwroot": "/",
-    "depDir": "dep",
-    "srcDir": "src",
-    "loaderAutoConfig": "js,htm,html,tpl,vm,phtml",
-    "loaderUrl": "http://s1.bdstatic.com/r/www/cache/ecom/esl/1-8-2/esl.js",
-    "dependencies": {}
-  },
-  "dependencies": {
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2"
-  },
-  "babel": {
-    "env": {
-      "dev": {
-        "presets": [
-          "es2015",
-          "stage-2",
-          "react"
-        ]
-      },
-      "test": {
-        "presets": [
-          "es2015",
-          "stage-2",
-          "react"
-        ],
-        "plugins": [
-          "istanbul"
-        ]
-      },
-      "production": {
-        "presets": [
-          [
-            "es2015",
-            {
-              "loose": true,
-              "modules": "umd"
-            }
-          ],
-          "stage-2",
-          "react"
-        ],
-        "plugins": [
-          "external-helpers",
-          "external-helpers-insert-require",
-          "transform-es3-property-literals",
-          "transform-es3-member-expression-literals"
-        ]
-      }
-    }
-  }
+  "homepage": "https://github.com/react-melon/melon-core#readme"
 }
